assets/css/main.css
/* ... */
		#footer .copyright {
			line-height: 1em;
			list-style: none;
			padding: 0;
		}

			#footer .copyright li {
				display: inline-block;
				font-size: 1.1em;
				align-content: center;
				padding-left: 1em;
				}

				#footer .copyright li:first-child {
					border-left: 0;
					margin-left: 0;
					padding-left: 0;
				}

				#footer .copyright li a {
					color: inherit;
					text-decoration: none;
				}

/* XLarge */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 13pt;
			}

		/* Header */

			#header {
				width: 21em;
			}

				#header > header {
					padding: 1.5em;
				}

				#header > footer {
					padding: 1.5em;
					padding-bottom: 1em;
				}

		/* Wrapper */

			#wrapper {
				padding-right: 21em;
			}

		/* Main */

			#main > section > .container {
				padding: 4em 0 2em 0;
			}

	}

/* Large */

	@media screen and (max-width: 1280px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 11pt;
			}

		/* Header */

			#header {
				width: 20em;
			}

		/* Wrapper */

			#wrapper {
				padding-right: 20em;
			}

	}

/* Medium */

	#titleBar {
		display: none;
	}

	@media screen and (max-width: 1024px) {

		/* Basic */

			html, body {
				overflow-x: hidden;
			}

			body, input, select, textarea {
				font-size: 12pt;
			}

		/* Image */

			.image.left, .image.right {
				max-width: 40%;
			}

				.image.left img, .image.right img {
					width: 100%;
				}

		/* Header */

			#header {
				-moz-backface-visibility: hidden;
				-webkit-backface-visibility: hidden;
				-ms-backface-visibility: hidden;
				backface-visibility: hidden;
				-moz-transition: -moz-transform 0.5s ease;
				-webkit-transition: -webkit-transform 0.5s ease;
				-ms-transition: -ms-transform 0.5s ease;
				transition: transform 0.5s ease;
				display: block;
				height: 100%;
				overflow-y: auto;
				position: fixed;
				top: 0;
				width: 23em;
				z-index: 10002;
				-moz-transform: translateX(23em);
				-webkit-transform: translateX(23em);
				-ms-transform: translateX(23em);
				transform: translateX(23em);
				right: 0;
			}

				#header > footer {
					bottom: auto;
					left: auto;
					margin: 0.5em 0 0 0;
					position: relative;
					right: auto;
					top: auto;
				}

		/* Wrapper */

			#wrapper {
				-moz-backface-visibility: hidden;
				-webkit-backface-visibility: hidden;
				-ms-backface-visibility: hidden;
				backface-visibility: hidden;
				-moz-transition: -moz-transform 0.5s ease;
				-webkit-transition: -webkit-transform 0.5s ease;
				-ms-transition: -ms-transform 0.5s ease;
				transition: transform 0.5s ease;
				padding: 44px 0 1px 0;
			}

		/* One */

			#one:before {
				height: 15em;
			}

		/* Off-Canvas Navigation */

			#titleBar {
				-moz-backface-visibility: hidden;
				-webkit-backface-visibility: hidden;
				-ms-backface-visibility: hidden;
				backface-visibility: hidden;
				-moz-transition: -moz-transform 0.5s ease;
				-webkit-transition: -webkit-transform 0.5s ease;
				-ms-transition: -ms-transform 0.5s ease;
				transition: transform 0.5s ease;
				display: block;
				height: 44px;
				left: 0;
				position: fixed;
				top: 0;
				width: 100%;
				z-index: 10001;
				background: #222;
				color: #fff;
				min-width: 320px;
			}

				#titleBar .title {
					color: #fff;
					display: block;
					font-weight: 700;
					height: 44px;
					line-height: 44px;
					padding: 0 1em;
					width: 100%;
					text-align: left;
				}

					#titleBar .title a {
						border: 0;
						text-decoration: none;
					}

				#titleBar .toggle {
					text-decoration: none;
					height: 4em;
					position: absolute;
					top: 0;
					width: 6em;
					border: 0;
					outline: 0;
					right: 0;
				}

					#titleBar .toggle:before {
						-moz-osx-font-smoothing: grayscale;
						-webkit-font-smoothing: antialiased;
						font-family: FontAwesome;
						font-style: normal;
						font-weight: normal;
						text-transform: none !important;
					}

					#titleBar .toggle:before {
						color: #ffffff;
						content: '\f0c9';
						display: block;
						font-size: 18px;
						height: 44px;
						line-height: 44px;
						position: absolute;
						text-align: center;
						top: 0;
						width: 64px;
						right: 0;
					}

			body.header-visible #wrapper, body.header-visible #titleBar {
				-moz-transform: translateX(-23em);
				-webkit-transform: translateX(-23em);
				-ms-transform: translateX(-23em);
				transform: translateX(-23em);
			}

			body.header-visible #header {
				-moz-transform: translateX(0);
				-webkit-transform: translateX(0);
				-ms-transform: translateX(0);
				transform: translateX(0);
			}

	}
/* ... */

